--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -167,3 +167,12 @@ p {
     --tw-border-opacity: 1;
     border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
+
+.action-button {
+    text-align: center;
+}
+
+table th {
+    text-align: center;
+    font-weight: bold!important;
+}
