--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -166,6 +166,7 @@ p {
     --tw-shadow: 0 0 #0000;
     --tw-border-opacity: 1;
     border-color: rgb(209 213 219 / var(--tw-border-opacity));
+    height: 35px;
 }
 
 .action-button {
@@ -175,4 +176,45 @@ p {
 table th {
     text-align: center;
     font-weight: bold!important;
+}
+
+.select2-selection__rendered {
+    line-height: 31px !important;
+}
+.select2-container .select2-selection--single {
+    height: 35px !important;
+}
+.select2-selection__arrow {
+    height: 34px !important;
+}
+
+.select2-container--default .select2-selection--single {
+    border: 1px solid #d1d5db!important;
+    border-radius: 0.375rem!important;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075)!important;
+}
+
+[type='text'], [type='email'], [type='url'], [type='password'], [type='number'], [type='date'], [type='datetime-local'], [type='month'], [type='search'], [type='tel'], [type='time'], [type='week'], [multiple], textarea, select {
+    height: 35px;
+}
+
+.select2-container .select2-selection--single .select2-selection__rendered {
+    padding-left: 0.75rem;
+}
+
+.custom-file-label {
+    border-radius: 0.375rem!important;
+    border: 1px solid #d1d5db!important;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075)!important;
+    color: #6c757d;
+}
+
+.invalid-feedback{
+    display: block;
+}
+
+.img-view{
+    border-radius: 0.375rem;
+    max-height: 150px;
+    width: auto;
 }
